--- a/.github/workflows/deploy_new_version.yaml
+++ b/.github/workflows/deploy_new_version.yaml
@@ -3,7 +3,15 @@ on:
   push:
     branches: [ main ]
 jobs:
-  write-to-console:
+  deploy-new-version:
     runs-on: ubuntu-latest
     steps:
-      - run: echo 'Hello world!'
+    - name: Adding Known Hosts
+      run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+    - name: Install SSH key
+      uses: shimataro/ssh-key-action@v2
+      with:
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
+    - name: run deploy script
+      run: /app/pylumber/deploy_new_version.sh
