--- a/.github/workflows/deploy_new_version.yaml
+++ b/.github/workflows/deploy_new_version.yaml
@@ -14,4 +14,4 @@ jobs:
     - name: Adding Known Hosts
       run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
     - name: run deploy script
-      run: /app/pylumber/deploy_new_version.sh
+      run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} /app/pylumber/deploy_new_version.sh
